unpackaged/main/default/objects/Application_Answer__c/Application_Answer__c.object-meta.xml
<CustomObject>
    <label>Application Answer</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Application Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>